[project]
name = "yomitan-dict-spliter"
version = "0.1.0"
description = ""
authors = [{ name = "birudo", email = "a514059172@gmail.com" }]
# readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.12"
pytest = "^8.4.0"
