[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    'modify_response',
    "load_module",
    "file_paths",
    "set_cookie",
]
packages = []

# [tool.setuptools.packages.find]
# where = ["src"]  # list of folders that contain the packages (["."] by default)
# include = ["my_package*"]  # package names should match these glob patterns (["*"] by default)
# exclude = ["my_package.tests*"]  # exclude packages matching these glob patterns (empty by default)
# namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[project]
name = "modify_response"
version = "0.0.1"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
